# R-seaux-Awale

./: CMakeLists.txt  README.md  awale.c  utils.c
cJSON/: cJSON.c  cJSON.h
src/: client.c  client.h  game.h  network.h  request.h  server.c  server.h  utils.h
